@@ -1,3 +1,8 @@
+2015-07-09 Martin Grønholdt
+
+* slighttp/http-response.c (http_process_response): Keep processing if there is no response yet.
+
+
 2015-07-02 Martin Grønholdt
 
 * slighttp/http-response.c: Added http_status_line_204.
